navbar position: relative. Spacing fixes with contact

--- a/styles/Contact.module.css
+++ b/styles/Contact.module.css
@@ -1,5 +1,5 @@
 .container {
-	min-height: 100vh;
+	min-height: 80vh;
 	max-width: 100vw;
 	padding: 0 0.5rem;
 	display: flex;
@@ -12,7 +12,8 @@
 	font-weight: 300;
 	font-family: var(--title-font);
 	margin-bottom: 2rem;
-	margin-left: -4rem;
+	width: 25%;
+	align-self: center;
 	color: var(--title-color);
 	text-decoration: underline;
 	text-decoration-color: var(--accent-color);
@@ -64,6 +65,7 @@
 	font-family: var(--body-font);
 	margin-top: 3rem;
 	margin-right: 21rem;
+	align-self: center;
 	background: none;
 	border: 1px solid var(--title-color);
 	color: var(--title-color);
@@ -82,8 +84,7 @@
 	.contactTitle {
 		line-height: 2.5rem;
 		margin-top: 2rem;
-		margin-left: -2rem;
-		width: 85vw;
+		width: 100%;
 	}
 
 	.formGroup {
