--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -3,7 +3,7 @@
 	font-weight: 600;
 	z-index: 1000;
 	/* box-shadow: 0 0 3px 3px rgba(0, 0, 0, 0.2); */
-	position: fixed;
+	position: relative;
 	width: 100%;
 	top: 0 !important;
 }
